# resource-manager

./: Cargo.toml  main.py  pyproject.toml
src/: main.rs  scraper.rs
